--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +13,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="kasa-logo.svg" />
+    <link rel="shortcut icon" type="image/x-icon" href="../src/visuels/kasa-logo.svg" />
+    <script src="https://kit.fontawesome.com/b7afbb8d12.js" crossorigin="anonymous"></script>
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
